# NOM-HRMS-deconvolution

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_AVAILABILITY.md  LICENSE  NOM_HRMS_FGA.spec  README.md  build_exe.py  launcher.py  pyproject.toml  requirements.txt  result_table.csv
.deepcode/skills/code-change-protocol/: SKILL.md
.github/workflows/: ci.yml  release_exe.yml
.issues/: 001-packaging-and-distribution.md  002-web-interface.md  003-integrate-external.md  004-fix-non-real-objects.md  004-full-audit-v0.4.md  005-test-mode.md  006-default-config-variants.md  007-expand-chemistry-dictionaries.md
configs/presets/: coal.json  peat.json  water.json
data/: README.md
data/ref_data/: ref_molecules_all_pubchem_filtered.csv
data/test_sets/set_01/: annotations.csv  annotations.csv.bak  config.json  deutermethylated.csv  deutermethylated.csv.bak  deuteroacylated.csv  deuteroacylated.csv.bak  molecules.csv  original.csv  original.csv.bak
data/test_sets/set_02/: annotations.csv  annotations.csv.bak  config.json  deutermethylated.csv  deutermethylated.csv.bak  deuteroacylated.csv  deuteroacylated.csv.bak  molecules.csv  original.csv  original.csv.bak
data/test_sets/set_03/: annotations.csv  annotations.csv.bak  config.json  molecules.csv  (+6 more)
docs/: README.md  README.txt  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.5.2.md  architecture.md  data_sources.md  test_spectra_generation.md  zenodo_metadata.md  Библиография  масс-спектрометрия ГВ с дериватизацией и алгоритмы обработки спектров.md  Классы веществ в составе гуминовых веществ  аналитические свидетельства, подтверждения и химические критерии принадлежности.md  отчёт_июль_2026.md
docs/plans/: v0.4-additional-tasks.md  v0.4-milestone-plan.md  v0.4.3-audit-fixes.md  v0.5-formula-dropdown.md  v0.5-milestone-plan.md  v0.5.1-patch-plan.md  v0.5.2-patch-plan.md
nom_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: README.md  README.txt  __init__.py  __main__.py  app.py  result_table.csv
src/configs/: README.md  __init__.py  chemistry.json  loader.py  paths.json  pipeline.json  presets_loader.py
src/core/: __init__.py  app.py  atoms.py  core.py  fragment_combinations.py  fragments.py  molecule.py  pipeline.py  raw_bridge.py  rdkit_bridge.py  spectrum_ops.py  structure_viewer.py  van_krevelen.py
src/simulations/: README.md  generate_test_sets.py  process_pubchem_candidates.py  search_pubchem_nom_like_cids.py
src/structures/: __init__.py  rdkit_utils.py  tab.py  widgets.py
src/testing/: artifact_export.py  report_models.py  smoke_runner.py  structure_export.py
src/ui/: __init__.py  plots.py  theme.py
testdata/: dacet_spectrum.csv  dmet_spectrum.csv  src_spectrum.csv
tests/: README.md  README.txt  conftest.py  test_assign_formulas.py  test_denoise.py  test_find_series.py  test_pipeline_integration.py
tests/integration/: test_app_smoke.py  test_pipeline_integration.py  test_raw_integration.py
tests/unit/: test__safety.py  test_annotations_consistency.py  test_assign_formulas.py  test_atoms.py  test_chemical_validity.py  test_core_utils.py  test_find_series.py  test_fragment_combinations.py  test_fragments.py  test_isotope_filter.py  test_molecule.py  test_nom_prioritize.py  test_pipeline.py  test_raw_bridge.py  test_rdkit_bridge.py  test_structural_validity.py
tools/: NOM_HRMS_FGA.spec  README.md  README.txt  __init__.py  build_exe.py  shift_masses_minus_proton.py  subtract_one_h.py  van_krevelen.py
(+21 files in other folders)
