[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nom-hrms-fga"
version = "0.4.2"
description = "NOM HRMS FGA: functional-group analyzer for natural organic matter (NOM) mass spectra"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vladimir S. Mikhaylenko", email = "mikhaylenkovs@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "nomspectra>=1.0.0",
    "rdkit>=2023.9",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "flake8>=7.0",
]
raw = [
    "comtypes>=1.1.14",
]

[project.scripts]
nom-hrms-fga = "src.app:main"

[project.urls]
Homepage = "https://github.com/MikhaylenkoVS/NOM-HRMS-FGA"
Repository = "https://github.com/MikhaylenkoVS/NOM-HRMS-FGA"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "external*", "docs*"]

[tool.setuptools.package-data]
src = ["configs/*.json"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "slow: slow tests",
    "integration: integration tests",
    "unit: unit tests",
    "smoke: smoke tests",
]
